--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2018"
 [dependencies]
 druid = { git = "https://github.com/linebender/druid.git" }
 
+[[bin]]   
+name = "druid-test"
+path = "src/main.rs"
+
+[lib]
+name = "ratio"
+path = "src/ratio.rs"
