--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# FIXME get rid of this (Lens and Data impl in yukari instead of lib)
+druid = { git = "https://github.com/linebender/druid.git" }
